Changes file for {{$dist->name}}

{{$NEXT}}

1.08      2013-07-04 14:37:24 America/Los_Angeles

  * Remove given/when constructs (which will silence the warnings on newer Perls)
    (Thanks to Heikki Lehvaslaiho for raising this issue.)

1.07      2013-04-24 20:27:45 America/Los_Angeles

  [BUGFIX]

  * Fix mocking so that test doesn't fail on older Perls

1.06      2013-04-14 17:28:20 America/Los_Angeles

  [BUGFIXES]

  * Make 'got mux' more resilant with re-attaching (Github issue #7) (John SJ Anderson)
  * Update for Net::GitHub API chaneg (Github issue #4) (John SJ Anderson)

  [ENHANCEMENT]

  * Add 'got move' command (Yanick Champoux)
  
1.05      2013-03-15 09:29:24 America/Los_Angeles

  [ENHANCEMENTS]

  * Add 'tmux' command to open tmux window in repo (Yanick Champoux)
  * Add 'got-complete' bash-complete helper (Yanick Champoux)
  * Use 'bin/got' POD for dist abstract

1.04      2011-12-12 21:27:40 America/New_York

  [BUGFIX]

  * And another broken test...

1.03      2011-12-11 22:16:13 America/New_York

  [BUGFIX]

  * Fix broken tests; d'oh.

1.02      2011-12-07 09:36:01 America/New_York

  [ENHANCEMENTS]

  * Add 'this' command to show if current repo is known to got (Yanick)
  * Add '--origin' option for 'add' command (Yanick)
  * Convert to MouseX::App::Cmd. (Thanks to Ingy for pointing that
    this module exists...)

1.01      2011-07-08 21:42:32 America/New_York

  [BUGFIX]

  * Add specific dep on Git::Wrapper version. (RT#69342)

1.0       2011-05-12 16:39:16 America/New_York

  [ENHANCEMENTS]

  * Add 'update_status' command (alias 'upst') which first does 'got
    update' followed by 'got status'.

  * Add 'push' command (as suggested by Brock Wilcox and Chas Owens)
    to do batch pushes of selected repos.

  * Add 'gc' command to trigger garbage collection in managed Git repos.

  * Tests, tests, tests

  [BUG FIXES]
  * Tweak $ENV{LESS} to work better with 256 color terms.

  * Remove '_bright_' from various colors in the dark-themed